Themes/Kompetenzzentrum2020/Resources/Public/css/styles.css
/* ... */
@media only screen and (max-width: 48em) {
  .tpl-home .siteheader {
    background-color: #333333;
  }
}

.tpl-home .siteheader .carousel .carousel-item__img .carousel-img {
  height: 100%;
  width: auto !important;
  max-width: none;
}

.tpl-home .section__box {
  margin: 0 -1em;
  border-radius: 0;
}

@media only screen and (max-width: 64em) {
  .tpl-home .section__box {
    padding: 60px 1em;
  }
}

.tpl-home .section .headline {
  margin-top: 0;
}

.tpl-home .py-3 {
  padding-top: 4.5em !important;
}

.tpl-home .introtext {
  font-family: "ff-tisa-web-pro", serif;
  text-align: center;
  font-size: 18px;
  font-size: 1.125rem;
  /*

    .mt-2 {
      @include media("smalldesk") {
        margin: 1em;
      }
    }

    .mt-3 {
      @include media("smalldesk") {
        margin: 0;
      }
    }*/
}

.tpl-home .introtext .headline {
  margin-top: 0;
}

.tpl-home .introtext-white {
  background-color: #ffffff;
  margin: 0 -1em;
}

@media only screen and (max-width: 90em) {
  .tpl-home .introtext .flex-basis-7 {
    -ms-flex-preferred-size: 66.666667%;
        flex-basis: 66.666667%;
  }
}

@media only screen and (max-width: 80em) {
  .tpl-home .introtext .flex-basis-7 {
    -ms-flex-preferred-size: 83.33336%;
        flex-basis: 83.33336%;
  }
}

@media only screen and (max-width: 64em) {
  .tpl-home .introtext__wrapper .flex-basis-4 {
    height: auto;
    margin: 2em 0;
  }
}

@media only screen and (max-width: 37.5em) {
  .tpl-home .introtext__wrapper .flex-basis-4 {
    margin: 3em 0;
  }
}

.tpl-home .introtext__wrapper p {
  height: 50px;
}

@media only screen and (max-width: 64em) {
  .tpl-home .introtext__wrapper p {
    min-height: 70px;
  }
}

.tpl-home .introtext .illu_mobile {
  display: none;
  border-radius: 8px;
}

@media only screen and (max-width: 37.5em) {
  .tpl-home .introtext .illu_mobile {
    display: inline-block;
  }
}

.tpl-home .introtext .illu_desk {
  display: inline-block;
  border-radius: 8px;
}

@media only screen and (max-width: 37.5em) {
  .tpl-home .introtext .illu_desk {
    display: none;
  }
}

.tpl-home h4,
.tpl-home .h4 {
  margin: 1em 0 0 0;
}

.tpl-home .tile {
  text-align: left;
}

.tpl-home .flex-basis-4 {
  -ms-flex-preferred-size: 30%;
      flex-basis: 30%;
  height: auto;
  width: 30%;
}

@media only screen and (max-width: 64em) {
  .tpl-home .flex-basis-4 {
    -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
  }
}

.tpl-search h1 {
  margin: 0em 0 0.5em 0;
}

.tpl-search h2 {
  margin: 2em 0 0em 0;
}

.tpl-search .tiles-wrapper {
  margin-top: 1em;
  position: relative;
}

.header .special-tpl-carousel {
  z-index: unset;
}

.header .special-tpl-carousel .carousel-indicators {
  z-index: unset;
}

@media only screen and (max-width: 64em) {
  .tpl-specials .siteheader .siteheader__title--primary {
    position: relative;
    top: 30px;
    bottom: auto;
  }
}

.tpl-specials .siteheader--big {
  max-width: initial;
  border-radius: 0;
}

@media only screen and (max-width: 64em) {
  .tpl-specials .siteheader--big {
    min-height: 500px;
    display: inline-block;
  }
}

@media only screen and (max-width: 48em) {
  .tpl-specials .siteheader--big {
    min-height: 400px;
    display: inline-block;
  }
}

@media only screen and (max-width: 37.5em) {
  .tpl-specials .siteheader--big {
    background-size: auto;
  }
}

.tpl-specials .tiles .flex-item {
  padding: 0 25px 50px 25px;
}

@media only screen and (max-width: 64em) {
  .tpl-specials .tiles .flex-item {
    padding: 0 15px 30px 15px;
  }
}

@media only screen and (max-width: 48em) {
  .tpl-specials .tiles .flex-item {
    padding: 0.5em;
  }
}

.tpl-specials .tile {
  line-height: 24px;
}

.tpl-specials .tile .tile__label {
  margin: 0 0.3em 0.3em 0;
}

.tpl-specials .tile .tile__label-wrapper {
  display: inline-block;
}

.tpl-specials .tile .tile__title-text {
  color: #435052;
  line-height: 24px;
}

.tpl-specials .tile .tile__content {
  padding: 30px 30px 30px 30px;
}

.tpl-specials .tile .tile__content .btn, .tpl-specials .tile .tile__content .typo3-fsc .button, .typo3-fsc .tpl-specials .tile .tile__content .button {
  padding: 0.8em 1.3em;
}

.tpl-specials .tile .tile__content .tile__text {
  padding: 10px 0 0px 0;
  font-size: 14px;
  font-size: 0.875rem;
  color: #707070;
}

.tpl-specials .tile .tile__content .tile__text .btn, .tpl-specials .tile .tile__content .tile__text .typo3-fsc .button, .typo3-fsc .tpl-specials .tile .tile__content .tile__text .button {
  margin: 30px 0 0 0;
  display: inline-block;
  height: auto;
}

.tpl-specials-detail .siteheader--big {
  height: 850px;
}

@media only screen and (max-width: 64em) {
  .tpl-specials-detail .siteheader--big {
    height: 700px;
  }
}

@media only screen and (max-width: 37.5em) {
  .tpl-specials-detail .siteheader--big {
    height: 600px;
  }
}

.tpl-specials-detail .siteheader--big .parallax-container {
  position: relative;
  overflow: hidden;
  min-height: 850px;
  width: 100vw;
}

@media only screen and (max-width: 64em) {
  .tpl-specials-detail .siteheader--big .parallax-container {
    height: 700px;
  }
}

@media only screen and (max-width: 37.5em) {
  .tpl-specials-detail .siteheader--big .parallax-container {
    height: 600px;
    min-height: unset;
  }
}

.tpl-specials-detail .siteheader--big .parallax-container .parallax {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.tpl-specials-detail .siteheader--big .parallax-container .parallax img {
  position: absolute;
  left: 50%;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  vertical-align: top;
  max-width: unset;
}

@media only screen and (max-width: 37.5em) {
  .tpl-specials-detail .siteheader--big .parallax-container .parallax img {
    height: 600px;
    bottom: 0;
    min-height: unset;
  }
}

.tpl-specials-detail .siteheader--big .siteheader__specials-title {
  position: relative;
  top: -90%;
}
/* ... */

